# airachnid

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent/: Dockerfile  cli.py  config.py  database.py  llm.py  main.py  prompts.py  pyproject.toml  store.py
agent/control_plane/: validator.py
agent/data_plane/: executor.py  store.py
agent/graph/: builder.py  state.py
agent/graph/nodes/: misc.py  output.py  query_rewriter.py  rag.py  router.py  search.py  validator.py
agent/memory/: session.py
agent/models/: game.py
agent/monitoring/: callbacks.py
agent/rag/: embedder.py  retriever.py
agent/tests/: benchmark.py
agent/tools/: mcp_client.py
db/init/: 01_init.sh  02_schema.sql  03_embeddings.sql  04_grants.sh
mcp-server/: Dockerfile  pyproject.toml  server.py  settings.py
mcp-server/tools/: vlc.py  wiz.py
tg-bot/: Dockerfile  bot.py  config.py  pyproject.toml
