[project]
name = "airachnid-agent"
version = "0.1.0"
description = "AIrachnid LangGraph agent"
requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "mcp>=1.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "redis>=5.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "langchain-postgres>=0.0.17",
    "langchain-community>=0.4.1",
    "ddgs>=9.11.4",
    "loguru>=0.7.3",
    "langgraph-checkpoint-redis>=0.4.0",
    "langfuse>=4.0.0",
    "langchain>=1.2.12",
    "langchain-mcp-adapters>=0.2.2",
    "pydantic-ai-slim[openai,fastmcp,openrouter]>=1.102.0",
    "langchain-openrouter>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
