[project]
name = "airachnid-mcp-server"
version = "0.1.0"
description = "AIrachnid MCP server — WiZ lights and VLC media control"
requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pywizlight>=0.6",
    "httpx>=0.27",
    "rapidfuzz>=3.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "loguru>=0.7.3",
    "fastmcp>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
